grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item_ext, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item_ext, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding)
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('name', $._type_constructor),
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            field('body', choice($.variant_declaration, $.record_declaration, '..'))
          )),
          repeat($.type_constraint)
        ),
        seq(
          field('name', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('body', $.variant_declaration)
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', $._type_param))
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type_ext
    ),

    _simple_type_ext: $ => choice(
      $._simple_type,
      $._extension
    ),

    _tuple_type_ext: $ => choice(
      $._tuple_type,
      $._extension
    ),

    _type_ext: $ => choice(
      $._type,
      $._extension
    ),

    tuple_type: $ => prec(PREC.prod, seq(
      $._tuple_type_ext,
      '*',
      $._simple_type_ext
    )),

    aliased_type: $ => prec(PREC.match, seq(
      $._type_ext,
      'as',
      $.type_variable
    )),

    parenthesized_type: $ => parenthesize($._type_ext),

    // Expressions

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    type_constructor_path: $ => prec(1, path($.extended_module_path, $._type_constructor)),

    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    type_variable: $ => seq(/'/, choice($._identifier, $._capitalized_identifier)),
