corpus/types.txt
================================================================================
Tuple types
================================================================================

type t = (t, t);
type t = (t, t, t);

--------------------------------------------------------------------------------

(compilation_unit
  (type_definition
    (type_binding
      (type_constructor)
      (parenthesized_type
        (tuple_type
          (type_constructor_path
            (type_constructor))
          (type_constructor_path
            (type_constructor))))))
  (type_definition
    (type_binding
      (type_constructor)
      (parenthesized_type
        (tuple_type
          (tuple_type
            (type_constructor_path
              (type_constructor))
            (type_constructor_path
              (type_constructor)))
          (type_constructor_path
            (type_constructor)))))))

================================================================================
Aliased types
================================================================================

type t = t as 't

--------------------------------------------------------------------------------

(compilation_unit
  (type_definition
    (type_binding
      (type_constructor)
      (aliased_type
        (type_constructor_path
          (type_constructor))
        (type_variable)))))
